[package]
name = "wei-build"
version = "0.1.0"
edition = "2021"

description = "wei build"
documentation = "https://github.com/zuiyue-com/wei-build"
homepage = "https://github.com/zuiyue-com/wei-build"
license = "MIT OR Apache-2.0"

[dependencies]
serde_yaml = "0.9"
toml = "0.7"
sha2 = "0.10.7"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
vt3 = "0.7.2"